@@ -2,6 +2,7 @@
 - Implements keyboard navigation for list views
 - Fixes scrollwheel volume change not reaching min or max value
 - Fixes low volume showing wrong volume icon
+- Fixes to prevent volume slider jankiness
 
 # 5.5.1
 
